[gd_scene load_steps=10 format=3 uid="uid://dnypvj606x8qy"]

[ext_resource type="Theme" uid="uid://chheyooha6tfm" path="res://theme.tres" id="1_cpg3b"]
[ext_resource type="Script" path="res://main.gd" id="1_tu572"]
[ext_resource type="PackedScene" uid="uid://4hx3wk6udhrw" path="res://element.tscn" id="2_5aajj"]
[ext_resource type="Texture2D" uid="uid://wa1n7ca5dkaa" path="res://clear-bar.png" id="4_0lup4"]
[ext_resource type="PackedScene" uid="uid://d1s71utp7qfpw" path="res://saved_popup.tscn" id="5_gxjrf"]

[sub_resource type="LabelSettings" id="LabelSettings_nt263"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rgdib"]
font_size = 26
font_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uwyla"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mvah1"]
font_size = 24
font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_tu572")

[node name="SaveDialog" type="FileDialog" parent="."]
title = ""
position = Vector2i(359, 126)
size = Vector2i(882, 648)
theme = ExtResource("1_cpg3b")
ok_button_text = "Conferma"
cancel_button_text = "Annulla"
access = 2

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(359, 126)
size = Vector2i(882, 648)
theme = ExtResource("1_cpg3b")
ok_button_text = "Open"
cancel_button_text = "Annulla"
file_mode = 0
access = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cpg3b")
metadata/_edit_lock_ = true

[node name="Titolo" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -540.0
offset_bottom = -492.0
grow_horizontal = 2
grow_vertical = 2
text = "Organizzazione contatti"
label_settings = SubResource("LabelSettings_nt263")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Percorso" type="Label" parent="Panel/Titolo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 8.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "C:/"
label_settings = SubResource("LabelSettings_rgdib")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.186667
anchor_right = 1.0
anchor_bottom = 0.853333
metadata/_edit_use_anchors_ = true

[node name="Elementi" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
offset_top = 1.0
offset_right = 1920.0
offset_bottom = 718.999
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1
metadata/_edit_group_ = true

[node name="Element" parent="Panel/ScrollContainer/Elementi" instance=ExtResource("2_5aajj")]
layout_mode = 2

[node name="AddButton" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(0, 60)
layout_mode = 0
offset_left = 1624.0
offset_top = 944.0
offset_right = 1821.0
offset_bottom = 1004.0
tooltip_text = "Aggiunge un elemento "
text = "Aggiungi elemento"

[node name="GoBackButton" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(0, 60)
layout_mode = 1
offset_left = 16.0
offset_top = 1024.0
offset_right = 176.0
offset_bottom = 1084.0
scale = Vector2(0.72, 0.72)
tooltip_text = "Aggiunge un elemento "
text = "Torna a Recenti"

[node name="OrdinaPer" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 142.0
offset_bottom = 101.0
text = "Ordina per..."
label_settings = SubResource("LabelSettings_uwyla")

[node name="SortAttivo" type="Label" parent="Panel/OrdinaPer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 152.0
offset_right = 278.0
offset_bottom = 37.0
label_settings = SubResource("LabelSettings_mvah1")

[node name="Cerca" type="LineEdit" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1648.0
offset_top = 72.0
offset_right = 1898.0
offset_bottom = 119.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
tooltip_text = "Cerca elementi secondo la categoria di ordinamento selezionata (Dove dice \"Ordina per...\")"
theme_override_icons/clear = ExtResource("4_0lup4")
placeholder_text = "Cerca..."
clear_button_enabled = true

[node name="Ordini" type="Control" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -404.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2

[node name="OrdinaCognome" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_right = 312.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
tooltip_text = "Ordina per cognome"
text = "Cognome"

[node name="OrdinaNome" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 312.0
offset_right = 640.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
tooltip_text = "Ordina per nome"
text = "Nome"

[node name="OrdinaIndirizzo" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 640.0
offset_right = 1072.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
tooltip_text = "Ordina per indirizzo"
text = "Indirizzo"

[node name="OrdinaCAP" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 1072.0
offset_right = 1152.0
offset_bottom = 64.0
size_flags_horizontal = 3
tooltip_text = "Ordina per CAP"
text = "CAP"

[node name="OrdinaCitta" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 1152.0
offset_right = 1320.0
offset_bottom = 64.0
size_flags_horizontal = 3
tooltip_text = "Ordina per città"
text = "Città"

[node name="OrdinaMunicipalita" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 1320.0
offset_right = 1408.0
offset_bottom = 64.0
size_flags_horizontal = 3
tooltip_text = "Ordina per municipalità"
text = "Municipalità"
clip_text = true

[node name="OrdinaQuartiere" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 1408.0
offset_right = 1608.0
offset_bottom = 64.0
size_flags_horizontal = 3
tooltip_text = "Ordina per quartiere"
text = "Quartiere"

[node name="OrdinaTelefono" type="Button" parent="Panel/Ordini"]
layout_mode = 0
offset_left = 1608.0
offset_right = 1856.0
offset_bottom = 64.0
size_flags_horizontal = 3
tooltip_text = "Ordina per quartiere"
text = "Telefono"

[node name="FileButtons" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2i(500, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -136.0
offset_right = 250.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(250, 30)

[node name="SaveButton" type="Button" parent="Panel/FileButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(0, 60)
layout_mode = 2
offset_right = 164.0
offset_bottom = 60.0
size_flags_horizontal = 3
tooltip_text = "Aggiunge un elemento "
text = "Salva"

[node name="SaveAsButton" type="Button" parent="Panel/FileButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(0, 60)
layout_mode = 2
offset_left = 168.0
offset_right = 332.0
offset_bottom = 60.0
size_flags_horizontal = 3
tooltip_text = "Aggiunge un elemento "
text = "Salva con nome"

[node name="LoadButton" type="Button" parent="Panel/FileButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(0, 60)
layout_mode = 2
offset_left = 336.0
offset_right = 500.0
offset_bottom = 60.0
size_flags_horizontal = 3
tooltip_text = "Aggiunge un elemento "
text = "Carica"

[node name="SavedPopup" parent="Panel" instance=ExtResource("5_gxjrf")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -64.0
offset_right = 104.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="AutosaveButton" type="CheckButton" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 72.0
offset_top = 944.0
offset_right = 295.0
offset_bottom = 1000.0
tooltip_text = "Salva il file automaticamente ogni 5 minuti"
button_pressed = true
text = "Autosalvataggio"

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 600.0
autostart = true
